--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
 
     <!-- linkando os arquivos Owl Carousel 2 css -->
-    <link rel="stylesheet" href="../styles/carousel-owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="../styles/carousel-owl/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/src/styles/carousel-owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="/src/styles/carousel-owl/owl.theme.default.min.css">
 
     <script src="https://kit.fontawesome.com/b357c29d3a.js" crossorigin="anonymous"></script>
     
@@ -20,7 +20,7 @@
     <!-- dados referente ao menu da página -->
     <header>
         <div class="container">            
-            <img src="/assets/img/logo_netflix.png" alt="Logo Netflix" class="logo">            
+            <img src="/src/assets/img/logo_netflix.png" alt="Logo Netflix" class="logo">            
             <nav>
                 <a href="#">Início</a>
                 <a href="#">Séries</a>
@@ -53,42 +53,42 @@
     <div class="carousel-movie">
         <div class="owl-carousel owl-theme">
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini1.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini1.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini2.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini2.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini3.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini3.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini4.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini4.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini5.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini5.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini6.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini6.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini7.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini7.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini8.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini8.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini9.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini9.jpg" alt="" srcset="">
             </div>
             <div class="item">
-                <img class="box-movie" src="/assets/img/mini10.jpg" alt="" srcset="">
+                <img class="box-movie" src="/src/assets/img/mini10.jpg" alt="" srcset="">
             </div>
         </div>        
     </div>
 
     <!-- linkando os arquivos Owl Carousel 2 js -->
-    <script src="../scripts/carousel-owl/jquery.min.js"></script>
-    <script src="../scripts/carousel-owl/owl.carousel.min.js"></script>
-    <script src="../scripts/carousel-owl/setup.js"></script>
+    <script src="/src/scripts/carousel-owl/jquery.min.js"></script>
+    <script src="/src/scripts/carousel-owl/owl.carousel.min.js"></script>
+    <script src="/src/scripts/carousel-owl/setup.js"></script>
 
     <footer class="baseboard">
         <p>Clone da Interface da Netflix desenvolvido junto a <a href="https://digitalinnovation.one/">Digital Innovation One</a></p>        
