update readme e outros arquivos com responsividade

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </header>
 
-    <!-- dasos referente ao fimle principal mostrado na página -->
+    <!-- dados referente ao filme principal mostrado na página -->
     <main>
         <div class="main-movie">
             <div class="container">
@@ -91,9 +91,9 @@
     <script src="/src/scripts/carousel-owl/setup.js"></script>
 
     <footer class="baseboard">
-        <p>Clone da Interface da Netflix desenvolvido junto a <a href="https://digitalinnovation.one/">Digital Innovation One</a></p>        
-        <p>Repositório GitHub <a href="https://github.com/Pleiterson/clone-interface-netflix-html-css-js">deste projeto</a></p><br>
-        <p>Desenvolvido por <a href="https://www.linkedin.com/in/pleiterson/">Pleiterson Amorim</a></p>
+        <p>Clone da Interface da Netflix desenvolvido junto a <a target="_blank" href="https://digitalinnovation.one/" rel="noopener noreferrer">Digital Innovation One</a></p>        
+        <p>Repositório <a target="_blank" href="https://github.com/Pleiterson/clone-interface-netflix-html-css-js" rel="noopener noreferrer"> GitHub </a>deste projeto</p><br>
+        <p>Desenvolvido por <a target="_blank" href="https://pleiterson.vercel.app/" rel="noopener noreferrer">Pleiterson Amorim</a></p>
     </footer>
 </body>
 </html>
